transit/src/main/resources/com/pixelduke/transit/base.css
/* ... */
/*==========================  Editable ComboBox  =============================*/

/*.combo-box-base.combo-box:editable > .text-input {
    -fx-skin: "javafx.scene.control.skin.TextFieldSkin"
}

.combo-box-base.combo-box:editable > .text-input {
    -fx-background-color: transparent, transparent;
}

/*===== Arrow Button =====*/
/*.combo-box-base.combo-box:editable > .arrow-button {
    -fx-background-insets: 0 0 0 -8;
    -fx-background-radius: 0;
}
.combo-box-base.combo-box:editable > .arrow-button:hover {
    -fx-background-color: combo_box_editable_button_hover_color;
}

/*====== Focused =======*/
/*.combo-box-base.combo-box:editable:focused {
    -fx-background-color: transparent, accent_color, transparent, combo_box_editable_focused_background_color;
}

/* - Arrow Button */
/*.combo-box-base.combo-box:editable:focused > .arrow-button > .arrow {
    -fx-background-color: combo_box_editable_focused_arrow_color;
}

.combo-box-base.combo-box:editable:focused > .arrow-button:hover {
    -fx-background-color: combo_box_editable_focused_button_hover_color;
}

/*******************************************************************************
 *                                                                             *
 * Text Common (TextField, PasswordField, TextArea)                            *
 *                                                                             *
 ******************************************************************************/

.text-input {
    -fx-border-color: border_color border_color border_bottom_color border_color;
    -fx-border-width: 1px 1px 2px 1px;
    -fx-border-radius: 4px;

    -fx-background-radius: 4px;
    -fx-background-color: background_color;

    -fx-font-family: "Segoe UI";
    -fx-text-fill: text_default_color;

    -fx-prompt-text-fill: prompt_text_color;

    -fx-highlight-fill: highlight_color;
    -fx-highlight-text-fill: highlighted_text_color;

    -fx-cursor: text;
    -fx-padding: 0.333333em 0.583em 0.333333em 0.583em; /* 4 7 4 7 */
}

.text-input.text-field > Pane,
.text-input.password-field > Pane {
    -fx-background-color: transparent;
}

/* hover */
.text-input:hover {
    -fx-background-color: background_hover_color;
}

/* focused */
.text-input:focused,
.text-input:hover:focused {
    -fx-background-color: background_focused_color;

    -fx-border-color: border_color border_color accent_color border_color, focus_ring_border_color;
    -fx-border-width: 1px 1px 2px 1px, 1px;
    -fx-border-style: solid, solid;
    -fx-border-radius: 4px, 4px;
    -fx-border-insets: 0, -3;

    -fx-text-fill: text_focused_color;
}

/*******************************************************************************
 *                                                                             *
 * Text Field (and PasswordField)                                              *
 *                                                                             *
 ******************************************************************************/

/* Issue #149: Need to use TextField because ColorPicker has custom textfields with "text-field" styleclass that aren't actually of type
   TextField which will cause an IllegalArgumentException when creating the impl.com.pixelduke.transit.TextFieldSkin object and passing it,
   for instance, the WebColorField */
TextField {
    -fx-skin: "com.pixelduke.control.skin.FXTextFieldSkin";

    -right-button-visible: true;
}

TextField:readonly {
    -right-button-visible: false;
}

.text-field > .right-button > .right-button-graphic {
    -fx-shape: "M221.738,305.873l6.135,6.16l-1.875,1.863l-6.135-6.159l-6.263,6.237l-1.864-1.875l6.263-6.238l-6.177-6.202l1.875-1.863l6.177,6.201l6.244-6.22l1.864,1.876L221.738,305.873z";

    -fx-padding: 0.333333em;
    -fx-background-color: right_graphic_color;

}

.text-field > .right-button {
    -fx-cursor: default;

    -fx-background-insets: -0.1666665em -0.45em -0.1666665em -0.45em; /* 4 7 4 7 -> this values are subtracted by 2px in em because of the border of the textfield */
    -fx-background-color: background_focused_color;  /* We must give it a color so that it reacts to the mouse */
}

.text-field > .right-button:hover {
    -fx-background-color: right_button_hover_color;
    -fx-background-radius: 4px;
}

.text-field > .right-button:hover > .right-button-graphic {
    -fx-background-color: right_graphic_hover_color;
}

/*******************************************************************************
 *                                                                             *
 * Password Field                                                              *
 *                                                                             *
 ******************************************************************************/

.password-field {
    -fx-skin: "com.pixelduke.control.skin.FXPasswordFieldSkin";

    -right-button-visible: true;
}

.password-field > .right-button {
    -fx-padding: 0 0.166667em 0 0.166667em;
}

.password-field > .right-button > .right-button-graphic {
    -fx-shape            : "M204.19,203.69A2.69,2.69,0,1,1,201.5,201,2.7,2.7,0,0,1,204.19,203.69ZM194,203.12h1.5s2.06-5,6-5c3.69,0,6,5,6,5H209s-2.06-6.5-7.5-6.5C195.5,196.62,194,203.12,194,203.12Z";
    -fx-scale-shape: false;
    -fx-background-color: right_graphic_color;
}

.password-field > .right-button:armed {
/*    -fx-background-color: accent_color;
*/
}

.password-field > .right-button:pressed > .right-button-graphic {
    -fx-background-color: right_graphic_armed_color;
}
/* ... */

